CHANGES
*******

0.3 (unreleased)
================

- BowerStatic failed to initialize if a component was discovered
  without a ``main``. These are handled now -- if you try to include a
  path to such a resource, no extra inclusions are generated. Fixes #5.

- If ``main`` was an array, only the first such resource was
  loaded. The correct behavior should be to load all these
  resources. This required a reworking of how resources get created;
  instead of creating a single resource for a path, a list of
  resources is created everywhere. Fixes #6 (and was mentioned in #5).

- Introduce a ``component(name)`` method on the components
  object. Given a component name it will give an object that has a
  ``url()`` method.  This can be used to obtain the URL of a component
  directory, which is sometimes useful when client-side code needs to
  construct URLs itself, such as for templates. Fixes issue #8.

0.2 (2014-07-18)
================

- Even if the same resource is included multiple times, it will only
  be included once. Thanks Ying Zhong for the bug report and suggested
  fix.

0.1 (2014-07-07)
================

- Initial public release.