@@ -1,0 +1,1 @@
+/* a test .foo resource */
